base1: Fix listing timeline top box alignment
Closes #3358

--- a/pkg/base1/cockpit.css
+++ b/pkg/base1/cockpit.css
@@ -940,7 +940,7 @@ div.timeline div.listing-panel {
 
 div.timeline.timeline-end {
     min-height: 30px;
-    padding-left: 40px;
+    padding-left: 36px;
     background-repeat: repeat-y;
     background-position: 0% 100%;
     background-size: 6px 5px;
